--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+nav{
+    background-color: aqua;
+    width: 100%;
+    padding: 1em;
+}
+nav a{
+    margin: 0em 2em;
+    font-size: 1.3rem;
+    font-weight: 600;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+footer{
+    background-color: black;
+    width: 100%;
+    padding: .5em;
+    text-align: center;
+    color: white;
 }
